# usd-mcp-server

./: .gitignore  LICENSE  README.md  Scene.usda  mcp.json  pyproject.toml  test-usd-prompt.txt
.github/workflows/: ci.yml
docs/: README.md  griptape-prompts.md  inspector.md  installation.md  mcp-griptape.md  usage.md
docs/adr/: 0001-dependency-strategy.md  0002-error-envelope.md  0003-usdz-export.md
docs/tools/: README.md  tier0.md
examples/: create_stage.py  minimal_read.py
mcp_nodes/: batch_set_attributes.py  compose_referenced_assembly.py  export_usd.py  library.json  usdz_viewer_launcher.py
mcp_nodes/usdz_viewer_app/: index.html  viewer.js
samples/: new.usda  simple.usda  simple.usdz  simple_flat.usda
samples/cube/: README.md  cube_asset.usda
samples/cube/model/: cube.usda  cube_open.usda
src/usd_mcp/: __init__.py  cli.py  core.py  errors.py  mcp_server.py  server.py  types.py  ws_server.py
src/usd_mcp/tools/: tier0.py  tier2.py  tier3.py
tests/: test_tier0.py
